# hotplug

./: README.md
hotplug/: CMakeLists.txt
hotplug/demo/: CMakeLists.txt  main.cpp
hotplug/docs/: doxygen.cmake  doxygen.conf.in
hotplug/include/hotplug/: HotPlugNotification.h  HotPlugWatcher.h  Observable.h
hotplug/src/: HotPlugWatcher.cpp
hotplug/src/linux/: HotPlugWatcherImpl.cpp  HotPlugWatcherImpl.h
